# CoMMA

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Agglomerator.cpp  Agglomerator_Isotropic.cpp  Agglomerator_Isotropic.h  CMakeLists.txt  CODA_transfer.sh  README.md  _a_r_computer_8h.html  _a_r_computer_8h.js  _a_r_computer_8h_source.html  _agglomerator_8h.html  _agglomerator_8h.js  _agglomerator_8h_source.html  _args_8h.html  _args_8h.js  _args_8h_source.html  _bimap_8h.html  _bimap_8h.js  _bimap_8h_source.html  _co_m_m_a_8cpp.html  _co_m_m_a_8cpp.js  _co_m_m_a_8h.html  _co_m_m_a_8h.js  _co_m_m_a_8h_source.html  _co_m_m_a_defs_8h.html  _co_m_m_a_defs_8h.js  _co_m_m_a_defs_8h_source.html  _co_m_m_a_types_8h.html  _co_m_m_a_types_8h.js  _co_m_m_a_types_8h_source.html  _coarse___cell_8h.html  _coarse___cell_8h.js  _coarse___cell_8h_source.html  _coarse___cell___container_8h.html  (+364 more)
.github/workflows/: main.yml
CoMMA_iso/: Agglomerator_Isotropic.cpp
CoMMA_lib/: .Agglomeration_lines.h.swp  .Agglomerator.cpp.swo  .Agglomerator.cpp.swp  .Agglomerator.h.swp  .Bimap.h.swp  .CoMMA.cpp.swp  .CoMMA.h.swp  .Coarse_Cell.cpp.swn  .Coarse_Cell.cpp.swp  .Coarse_Cell.h.swp  .Coarse_Cell_Graph.cpp.swo  .Coarse_Cell_Graph.cpp.swp  .Coarse_Cell_Graph.h.swp  .Dual_Graph.cpp.swn  .Dual_Graph.cpp.swo  .Dual_Graph.cpp.swp  .Dual_Graph.h.swo  .Dual_Graph.h.swp  .Seeds_Pool.cpp.swp  .Tree.cpp.swp  .Tree.h.swp  .nfs00000000a1c0942800008eff  2  Agglomerator.cpp  Agglomerator.h  Agglomerator_Isotropic.cpp  Agglomerator_Isotropic.h  Agglomerator_anisotropic.cpp  Agglomerator_anisotropic.h  Agglomerator_b.cpp  Agglomerator_back.cpp  Bimap.h  CMakeLists.txt  CoMMA.cpp  CoMMA.h  CoMMATypes.h  Coarse_Cell.cpp  Coarse_Cell.h  Coarse_Cell_Container.h  Coarse_Cell_Graph.cpp  (+35 more)
CoMMA_lib/deprecated/: Bimap.h  Priority_Pair.h  Queue.h  README.md  Tree.h  templateHelpers.h
CoMMA_lib/examples_python/: test_dualGPy.py  test_from_comma_source.py
Documentation/: Doxyfile  README.md
Google_tests/: .Tests_CoMMA.cpp.swp  Box_1_prism_Dual_Graph.h  Box_5x5x5_Aniso_Dual_Graph.h  Box_5x5x5_Aniso_lvl_2_Dual_Graph.h  Box_5x5x5_Dual_Graph.h  Box_5x5x5_iso_and_Aniso_Dual_Graph.h  CMakeLists.txt  Edge_7_Dual_Graph.h  Edge_8_Dual_Graph.h  Edge_9_3_Dual_Graph.h  Edge_9_Dual_Graph.h  Example_6_Dual_Graph.h  Example_7_Dual_Graph.h  Example_8_Dual_Graph.h  Example_9_Dual_Graph.h  Example_One_Dual_Graph.h  Fifteen_squares_5x3_Dual_Graph.h  Graphs_biconnected_Dual_Graph.h  MGridGen_Dual_Graph.h  MGridGen_ext_Dual_Graph.h  MGridGen_ext_v2_Dual_Graph.h  Nine_squares_3x3_Dual_Graph.h  Tests_Agglomerator.cpp  Tests_Agglomerator_anisotropic.cpp  Tests_Agglomerator_basic.cpp  Tests_Agglomerator_isotropic.cpp  Tests_Agglomerator_triconnected.cpp  Tests_CC.cpp  Tests_CoMMA.cpp  Tests_CoarseCellGraph.cpp  Tests_Coarse_Cell.cpp  Tests_Coarse_Cell_Graph.cpp  Tests_DualGraph.cpp  Tests_Dual_Graph.cpp  Tests_Dual_Graph_old.cpp  Tests_Edge.cpp  Tests_First_Order_Neighbourhood.cpp  Tests_SeedsPool.cpp  Tests_Seeds_Pool.cpp  Tests_Triconnected_graph.cpp  (+30 more)
Google_tests/tests/0_Inputs/: Box_1_prism_Dual_Graph.h  Box_5x5x5_Aniso_Dual_Graph.h  Box_5x5x5_Aniso_lvl_2_Dual_Graph.h  Box_5x5x5_Dual_Graph.h  Box_5x5x5_iso_and_Aniso_Dual_Graph.h  Edge_7_Dual_Graph.h  Edge_8_Dual_Graph.h  Edge_9_3_Dual_Graph.h  Edge_9_Dual_Graph.h  Example_6_Dual_Graph.h  Example_7_Dual_Graph.h  Example_8_Dual_Graph.h  Example_9_Dual_Graph.h  Example_One_Dual_Graph.h  Fifteen_squares_5x3_Dual_Graph.h  Graphs_biconnected_Dual_Graph.h  MGridGen_Dual_Graph.h  MGridGen_ext_Dual_Graph.h  MGridGen_ext_v2_Dual_Graph.h  Nine_squares_3x3_Dual_Graph.h  Triconnected_graph_2_graphs_biconnected_n_8_m_14.h  Triconnected_graph_A.h  Triconnected_graph_C.h  Triconnected_graph_C_2_BCC.h  Triconnected_graph_C_3_BCC.h  Triconnected_graph_D.h  Triconnected_graph_E.h  Triconnected_graph_F.h  Triconnected_graph_G.h  Triconnected_graph_H.h  Triconnected_graph_MGridGen.h  Triconnected_graph_MGridGen_biconnected.h  Triconnected_graph_OGDF_100_200.h  Triconnected_graph_OGDF_original_connectedGraph_13_16.h  Triconnected_graph_biconnected_OGDF_n_10_m_19.h  Triconnected_graph_biconnected_OGDF_n_15_m_30.h  Triconnected_graph_biconnected_OGDF_v2_n_10_m_19.h  Triconnected_graph_biconnected_OGDF_v3_n_10_m_19.h  Triconnected_graph_biconnected_hexahedra.h  Triconnected_graph_biconnected_n_13_m_16.h  (+6 more)
config_files/: CoMMAConfig.h.in  comma.pc.in
examples/cpp/: ex_aniso_lines.cpp  ex_coarse_graph.cpp
examples/meshes/: .gitattributes  README.md  raebis_ansys.msh
examples/scripts/: README.md  comma_tools.py  ex_aniso_lines.py  ex_default_dualGPy.py  ex_rae.py  ex_read_mesh.py  ex_several_agglo_levels.py  pyproject.toml  test_CoMMA.py
images/logos/: README.md
include/CoMMA/: ARComputer.h  Agglomerator.h  Args.h  CoMMA.h  CoMMADefs.h  CoMMATypes.h  Coarse_Cell.h  Coarse_Cell_Container.h  Dual_Graph.h  Neighbourhood.h  README.md  Seeds_Pool.h  Util.h
misc_scripts/: README.md  header_profile.h  test_pkgconfig_compile.cpp  test_util.h
misc_scripts/profiling/: trace_categories.cpp  trace_categories.h
postpro/: aggl.py
postpro/meshes/: README.md  (+3 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+62 more)
src/: CoMMA.cpp
tests/: .test_structure.cpp.swo  .test_structure.cpp.swp  CMakeLists.txt  DualGraphExamples.h  README.md  header_profile.h  test_ARComputer.cpp  test_anisoagglo.cpp  test_correction.cpp  test_defs.h  test_deprecated.cpp  test_graph.cpp  test_isoagglo.cpp  test_neighbourhood.cpp  test_perf.cpp  test_profile.cpp  test_seedspool.cpp  test_structure.cpp  test_types.h  test_util.h  test_utils.cpp
(+39 files in other folders)
